control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/multi-llm-ui/k8s/gemma-3-12b-it-ollama.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-gemma-3-12b-it-deployment
spec:
  selector:
    matchLabels:
      name: ollama
  template:
    metadata:
      labels:
        name: ollama
    spec:
      containers:
        - name: ollama
          image: us-docker.pkg.dev/gkebatchenve1667028/genai/ollama-gemma-3-12b:0.1.0
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            requests:
              cpu: '4'
              memory: '32Gi'
              ephemeral-storage: '32Gi'
              nvidia.com/gpu: '2'
            limits:
              cpu: '4'
              memory: '32Gi'
              ephemeral-storage: '32Gi'
              nvidia.com/gpu: '2'
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
        cloud.google.com/gke-gpu-driver-version: latest
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-gemma-3-3b-it-service
spec:
  selector:
    name: ollama
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
