control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/multi-llm-ui/k8s/llama-3-2-3b-it-tgi.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tgi-llama-3-3b-it-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama-3b-server
  template:
    metadata:
      labels:
        app: llama-3b-server
        ai.gke.io/model: llama-3.2-3b-it
        ai.gke.io/inference-server: text-generation-inference
        examples.ai.gke.io/source: user-guide
    spec:
      containers:
        - name: inference-server
          image: us-docker.pkg.dev/deeplearning-platform-release/gcr.io/huggingface-text-generation-inference-cu124.2-4.ubuntu2204.py311
          resources:
            requests:
              cpu: '2'
              memory: '10Gi'
              ephemeral-storage: '10Gi'
              nvidia.com/gpu: '1'
            limits:
              cpu: '2'
              memory: '10Gi'
              ephemeral-storage: '10Gi'
              nvidia.com/gpu: '1'
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
        cloud.google.com/gke-gpu-driver-version: latest
---
apiVersion: v1
kind: Service
metadata:
  name: tgi-llama-3-3b-it-service
spec:
  selector:
    app: llama-3b-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
