control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/multi-llm-ui/k8s/llama-3-8b-it-vllm-tpu-gcs-fuse.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-3-8b-it-vllm-tpu
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-tpu
  template:
    metadata:
      labels:
        app: vllm-tpu
      annotations:
        gke-gcsfuse/volumes: 'true'
        gke-gcsfuse/cpu-limit: '0'
        gke-gcsfuse/memory-limit: '0'
        gke-gcsfuse/ephemeral-storage-limit: '0'
    spec:
      serviceAccountName: tpu-sa
      nodeSelector:
        cloud.google.com/gke-tpu-topology: 2x4
        cloud.google.com/gke-tpu-accelerator: tpu-v5-lite-podslice
      containers:
        - name: vllm-tpu
          image: vllm/vllm-tpu:0661cfef7a3bcb2c4ec6b03d6e070ce750150b3d
          command: ['python3', '-m', 'vllm.entrypoints.openai.api_server']
          args:
            - --host=0.0.0.0
            - --port=8000
            - --tensor-parallel-size=8
            - --max-model-len=4096
            - --model=meta-llama/Llama-3.1-8B-Instruct
            - --download-dir=/data
          ports:
            - containerPort: 8000
          resources:
            limits:
              google.com/tpu: '8'
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          volumeMounts:
            - name: gcs-fuse-csi-ephemeral
              mountPath: /data
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: gke-gcsfuse-cache
          emptyDir:
            medium: Memory
        - name: dshm
          emptyDir:
            medium: Memory
        - name: gcs-fuse-csi-ephemeral
          csi:
            driver: gcsfuse.csi.storage.gke.io
            volumeAttributes:
              bucketName: tpu-model-storage-01
              mountOptions: 'implicit-dirs,file-cache:enable-parallel-downloads:true,file-cache:parallel-downloads-per-file:100,file-cache:max-parallel-downloads:-1,file-cache:download-chunk-size-mb:10,file-cache:max-size-mb:-1'
---
apiVersion: v1
kind: Service
metadata:
  name: llama-3-vllm-tpu-service
spec:
  selector:
    app: vllm-tpu
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
