control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/multi-llm-ui/k8s/multillm-ui.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: multillm-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multillm-ui
  template:
    metadata:
      labels:
        app: multillm-ui
    spec:
      containers:
        - name: multillm-ui
          image: <YOUR_IMAGE_URL>
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: multillm-ui
spec:
  type: ClusterIP
  selector:
    app: multillm-ui
  ports:
    - port: 80
      targetPort: 3000
