control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/multi-llm-ui/k8s/phi-4-instruct-mini-vllm.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-phi-4-4b-it-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm-phi-4-4b-it-server
  template:
    metadata:
      labels:
        app: vllm-phi-4-4b-it-server
        ai.gke.io/model: vllm-phi-4-4b-it
        ai.gke.io/inference-server: vllm
        examples.ai.gke.io/source: user-guide
    spec:
      containers:
        - name: inference-server
          image: us-docker.pkg.dev/vertex-ai/vertex-vision-model-garden-dockers/pytorch-vllm-serve:20250312_0916_RC01
          resources:
            requests:
              cpu: '2'
              memory: '20Gi'
              ephemeral-storage: '20Gi'
              nvidia.com/gpu: '1'
            limits:
              cpu: '2'
              memory: '20Gi'
              ephemeral-storage: '20Gi'
              nvidia.com/gpu: '1'
          command: ['python3', '-m', 'vllm.entrypoints.openai.api_server']
          args:
            - --model=$(MODEL_ID)
            - --tensor-parallel-size=1
            - --host=0.0.0.0
            - --port=8000
            - --max-model-len=4096
            - --max-num-seqs=4
          volumeMounts:
            - mountPath: /dev/shm
              name: dshm
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
      nodeSelector:
        cloud.google.com/gke-accelerator: nvidia-l4
        cloud.google.com/gke-gpu-driver-version: latest
---
apiVersion: v1
kind: Service
metadata:
  name: vllm-phi-4-4b-it-service
spec:
  selector:
    app: vllm-phi-4-4b-it-server
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
