control/legacy_workspaces/archive_legacy_ShadowTag-v2/apps/devrel-demos/containers/multi-llm-ui/k8s/multillm-ui-gateway.yaml
# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: multillm-gateway
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        options:
          networking.gke.io/pre-shared-certs: multillm-ui-cert
  addresses:
    - type: NamedAddress
      value: multillm-ui
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: multillm-httproute
  labels:
    gateway: multillm-route
spec:
  parentRefs:
    - name: multillm-gateway
      sectionName: https
  hostnames:
    - '<YOUR_DOMAIN>'
  rules:
    - backendRefs:
        - name: multillm-ui
          port: 80
